--- a/contact.html
+++ b/contact.html
@@ -22,13 +22,39 @@
 </body>
 <div id="main">
     <h1>Contact</h1>
-    <p class="ThankYou">Thank you for visitng my site. <br> Feel free to contact me and leave <br> your name and number to make an <br> appointment for a photo or video shoot today! </p>
+    <p class="ThankYou">Thank you for visitng my site. <br> Feel free to contact us and leave <br> your name and number to make an <br> appointment for a photo or <br> video shoot today! </p>
     <p class="Info"> 1234 Baker Street <br>
             Coquitlam, British Columbia <br>
             HDdesigns@gmail.com <br>
             555-666-7788
     </p>
+    <p class="team"> Team Members</p>
 
 </div>
+<table border="1" cellpadding="5" cellspacing="5" class="teamtable">
+    <tr><th>Name</th>
+        <th>Position</th>
+    </tr><tr>
+        <td>Vlad Pavel</td>
+        <td>Ceo and Editior</td>
+    </tr><tr>
+        <td>Harrison Russell-Lucas</td>
+        <td>Graphic and Web Designer</td>
+    </tr><tr>
+        <td>Tyler Hopkins</td>
+        <td>Event Planner</td>
+    </tr><tr>
+        <td>Kyle magnisson</td>
+        <td>Advertising</td>
+    </tr><tr>
+        <td>Lee Callaway</td>
+        <td>Photographer</td></tr>
+        <tr>
+            <td>Robert Tullin</td>
+            <td>Photographer</td>
+    </table>
+
+
+
 <div id="miata"></div>
 </html>
