--- a/gallery.html
+++ b/gallery.html
@@ -17,18 +17,19 @@
         </ul>
     </div>
     <i class="fas fa-bars"></i>
-</body>
+
+
 <div id="main">
     <h1> Gallery </h1>
     <p class="speed"> Speed </p>
     <p class="stance"> Stance </p>
 
 </div>
-<div id="wagon"></div>
+<a href="wagon.html"><div id="wagon"></div></a>
 <div id="truck"></div>
 <div id="s15"></div>
 <div id="evo"></div>
 
-
+</body>
 
 </html>
